chore(example): change image width to be able to see all content

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,11 @@
   </head>
 
   <body>
-    <img src="/image.jpg" alt="cool ass image" />
+    <img
+      src="/image.jpg"
+      alt="if you see this text, the server is cooked."
+      width="30%"
+    />
 
     <section>
       <h1>ezcli/root</h1>
